# royal_gazette_job_hunter

./: pyproject.toml  readme.md  readme.txt  requirements.txt  web_scraper.py
src/: config.json  main.py  main_local.py
