[tool.poetry]
name = "job-hunter"
version = "0.1.0"
description = ""
authors = ["harrymunro <harry.j.munro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
beautifulsoup4 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

